--- a/css/index.css
+++ b/css/index.css
@@ -4,9 +4,10 @@
 }
 
 /* title_wrap START */
-#wrap > div.title_wrap {
+#wrap > div.title_wrap{
     border-bottom: thick double #dadada;
-    margin: 10px; padding: 10px;
+    margin: 10px;
+    padding: 10px;
     font-weight: bold;
     text-align: center;
     font-size: 1.1em;
@@ -14,11 +15,10 @@
 /* title_wrap END */
 
 /* menu_wrap START */
-#wrap > div.menu_wrap {
+#wrap > div.menu_wrap{
     text-align: center;
 }
-
-#wrap > div.menu_wrap a {
+#wrap > div.menu_wrap a{
     display: inline-block;
     width: 100px;
     margin: 10px 5px;
@@ -27,92 +27,86 @@
     border-radius: 10px;
     text-align: center;
 }
-
-#wrap > div.menu_wrap a:hover {
+#wrap > div.menu_wrap a:hover{
     text-decoration: none;
     background-color: #f8f8f8;
 }
-
-#wrap > div.menu_wrap a.sign_out {
+#wrap > div.menu_wrap a.sign_out{
     display: none;
 }
 /* menu_wrap END */
 
 /* sign_up_wrap START */
-#wrap > div.sign_up_wrap {
+#wrap > div.sign_up_wrap{
     text-align: center;
-
+    display: none;
 }
-
-#wrap > div.sign_up_wrap input {
+#wrap > div.sign_up_wrap input{
     width: 400px;
-    padding: 10px; margin: 1px;
+    padding: 10px;
+    margin: 1px;
     border: 1px solid #dadada;
     border-radius: 7px;
 }
-
-#wrap > div.sign_up_wrap input[type='button'] {
+#wrap > div.sign_up_wrap input[type='button']{
     width: 100px;
     cursor: pointer;
-
 }
 /* sign_up_wrap END */
 
 /* sign_in_wrap START */
-#wrap > div.sign_in_wrap {
+#wrap > div.sign_in_wrap{
     text-align: center;
-
+    display: none;
 }
-
-#wrap > div.sign_in_wrap input {
+#wrap > div.sign_in_wrap input{
     width: 400px;
-    padding: 10px; margin: 1px;
+    padding: 10px;
+    margin: 1px;
     border: 1px solid #dadada;
     border-radius: 7px;
 }
-
-#wrap > div.sign_in_wrap input[type='button'] {
+#wrap > div.sign_in_wrap input[type='button']{
     width: 100px;
     cursor: pointer;
 }
 /* sign_in_wrap END */
 
-/* write_wrap START */
-#wrap > div.write_wrap {
+/* #write_wrap START */
+#wrap > div.write_wrap{
     text-align: center;
-
+    display: none;
 }
-
-#wrap > div.write_wrap input {
+#wrap > div.write_wrap input{
     width: 500px;
-    padding: 20px; margin: 10px;
+    padding: 20px;
+    margin: 10px;
     border: 1px solid #dadada;
     border-radius: 7px;
     font-size: 1.2em;
 }
-
-#wrap > div.write_wrap button {
-    padding: 20px; margin: 10px 0;
+#wrap > div.write_wrap button{
+    padding: 20px;
+    margin: 10px 0;
     border: 1px solid #dadada;
     border-radius: 7px;
     font-size: 1.2em;
     cursor: pointer;
 }
-
-#wrap > div.write_wrap button:hover {
+#wrap > div.write_wrap button:hover{
     background-color: #f8f8f8;
-} 
+}
+/* #write_wrap END */
 
-/* write_wrap END */
-
-/* list_wrap START */
-#wrap > div.list_wrap {
+/* #list_wrap START */
+#wrap > div.list_wrap{
+    text-align: center;
     display:none;
 }
-
-#wrap > div.list_wrap div {
-    margin:2px auto; padding: 10px;
-    width: 600px;
+#wrap > div.list_wrap div{
+    margin: 2px auto;
+    padding: 10px;
     border: 1px solid #dadada;
     border-radius: 7px;
 }
+/* #list_wrap END */
